--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@ body {
   background-color: white;
   margin: 0 auto;
   max-width: 1100px;
-  /* min-width: 1100px; */
   overflow-x: hidden;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   padding-bottom: 30px;
@@ -15,6 +14,7 @@ body {
 code {
   padding: .2em .4em;
   background-color:#ebeff1;
+  font-size: 15px;
   border-radius: 6px;
   margin:0;
 }
@@ -44,10 +44,11 @@ code {
 .nav-bar{
   list-style-type: none;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   padding: 0;
   overflow: hidden;
   background-color:  #212121;
+  font-size: 16px;
 }
 
 .nav-bar li{
