--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #0d1117;
   margin: 0 auto;
   max-width: 1100px;
   overflow-x: hidden;
@@ -13,7 +13,8 @@ body {
 
 code {
   padding: .2em .4em;
-  background-color:#ebeff1;
+  color: #eb8668;
+  background-color: #212121;
   font-size: 15px;
   border-radius: 6px;
   margin:0;
@@ -47,7 +48,7 @@ code {
   margin-bottom: 30px;
   padding: 0;
   overflow: hidden;
-  background-color:  #212121;
+  background-color: #161b22;
   font-size: 16px;
 }
 
